# template-cpp-project

./: .clang-tidy  .cmake-format.yaml  .condaignore  .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  pixi.toml  vcpkg.json
.github/workflows/: ci.yml
activation/: clang.bat  clang.sh  dpcpp.sh  gcc.sh  linux.sh  msvc.bat  runtime.sh
cmake/: clang-tidy.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  sycl.cmake  variables.cmake
docs/: Doxyfile.in
files/: conda-activate.sh
include/template-cpp-project/: template-cpp-project.hpp
recipe/: README.md  recipe-clang.yaml  recipe-dpcpp.yaml  recipe-gcc.yaml  recipe-mingw.yaml  recipe.yaml  variants-linux-clang.yaml  variants-linux-gcc.yaml  variants-win-clang.yaml  variants-win-msvc.yaml  variants.yaml
scripts/: build.nu  build.sh  change-project-name.nu  change-project-name.sh  configure.nu  configure.sh  fix-compile-commands.nu  fix-compile-commands.py  install.nu  install.sh  modify-presets.py  patch-rpaths.nu  patch_installed_rpaths.sh
source/: template-cpp-project.cpp
test/: CMakeLists.txt
test/source/: template-cpp-project_test.cpp
toolchains/: dpcpp-linux.cmake  linux.cmake  windows.cmake
